# QuantForge

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CHANGES.md  Dockerfile  LICENSE  README.md  STRUCTURE.md  check_system.bat  check_system.ps1  config.ps1.example  docker-compose.yml  pyproject.toml  quantforge.bat  quantforge.ps1  quantize_only.ps1  requirements-dev.txt  requirements.txt  run_optimization.bat  run_optimization.ps1  setup_ollama.bat  setup_ollama.ps1  sonar-project.properties  start_api.bat  start_api.ps1  start_web.bat  start_web.ps1  test_models.ps1
.github/workflows/: ci.yml
config/: default.yaml
config/profiles/: qwen2.5-coder-7b.yaml
docker/: Dockerfile.api  requirements-api.txt  requirements.txt  versions.env
docs/: api.md  architecture.md  models.md  troubleshooting.md  void.md  web.md
ollama/: Modelfile  VOID_IDE.md  setup_ollama.ps1
scripts/: Load-Config.ps1  Pipeline-Lock.ps1  ci.ps1  clean.ps1  install_llama_cpu.ps1  install_llama_gpu.ps1  load_config.py  quantize.sh  repair_llama.ps1  start_api.ps1  start_web.ps1  test_api.ps1  verify_ollama.ps1
src/: benchmark.py  chat_cli.py  config_loader.py  llama_env.py  model_config.py  qwen_chat.py  validate_gguf.py
src/quantforge/: __init__.py  __main__.py  benchmark_runner.py  chat_runner.py  clean_runner.py  cli.py  config.py  inference.py  inventory.py  llama_env.py  manifest.py  metrics_export.py  metrics_store.py  ollama_runner.py  report_runner.py  safe_io.py  serve_runner.py  utils.py  validate_runner.py  web_runner.py
src/quantforge/web/: __init__.py  app.py  jobs.py
src/quantforge/web/static/: index.html
tests/: test_clean.py  test_config.py  test_inference.py  test_ollama.py  test_regression.py  test_report.py  test_safe_io.py  test_serve_config.py  test_web.py
tests/fixtures/: benchmark_baseline.json
