[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "quantforge"
version = "0.6.0"
description = "Local LLM quantization and benchmarking toolkit for Windows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
inference = [
    "llama-cpp-python>=0.2.0",
]
api = [
    "llama-cpp-python>=0.2.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "sse-starlette>=3.4.4",
    "pydantic-settings>=2.14.1",
]
web = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "sse-starlette>=3.4.4",
]
dev = [
    "ruff>=0.15.14",
    "pytest>=9.0.3",
]

[project.scripts]
quantforge = "quantforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"quantforge.web" = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "venv", "models", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/quantforge/llama_env.py" = ["E402"]
"src/llama_env.py" = ["E402", "F401"]
"src/config_loader.py" = ["F401"]
"src/qwen_chat.py" = ["F401"]
